# NeteaseSensitiveWordsProject

./: CHANGELOG.md  CMakeLists.txt  DecryptSensitiveWords.py  G79SensitiveWords.json  G79SensitiveWords_Examples.json  README.md  X19SensitiveWords.json  changes.json  last_urls.json  server.cpp  update_script.py
.github/workflows/: build-linux.yml  update-sensitive-words.yml
CPP/: CMakeLists.txt  vcpkg.json
Changelog/: CHANGELOG.md  changes.json
SensitiveWords/: G79SensitiveWords.json  X19SensitiveWords.json
